Remove pytest-xdist settings and skip cpu tests in cuda envs

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ extras =
 
 [testenv:py{38,39}-{internal,dawn}-{cuda,cuda90,cuda91,cuda92,cuda100,cuda101}]
 commands =
-    pytest --cache-clear --cov -v {posargs}
+    pytest --cache-clear --cov -v -k "requires_gpu or requires_cudatoolkit" {posargs}
     pytest --doctest-modules --cov --cov-append {envsitepackagesdir}/eve
 extras =
     testing
