--- a/tests/test_gtc_unstructured/regression/cpp/CMakeLists.txt
+++ b/tests/test_gtc_unstructured/regression/cpp/CMakeLists.txt
@@ -108,6 +108,7 @@ if(BUILD_TESTING)
     # add_regression_test(vertex2edge)
     add_regression_test(vertex2edge_gtir DRIVER vertex2edge)
     add_regression_test(sparse_assign_gtir DRIVER sparse_assign)
+    add_regression_test(weights_gtir DRIVER weights)
     # add_regression_test(tmp_field)
     # add_regression_test(fvm_nabla ADDITIONAL_LIBRARIES atlas eckit)
 endif()
