--- a/tox.ini
+++ b/tox.ini
@@ -19,19 +19,6 @@ whitelist_externals =
     gcc
     g++
     ldd
-
-[testenv:py{38,39}-{internal,dawn}-cpu]
-commands =
-    pytest --cache-clear --cov -v -k "not requires_gpu and not requires_cudatoolkit" {posargs}
-    pytest --doctest-modules --cov --cov-append {envsitepackagesdir}/eve
-extras =
-    testing
-    dawn: dawn
-
-[testenv:py{38,39}-{internal,dawn}-{cuda,cuda90,cuda91,cuda92,cuda100,cuda101}]
-commands =
-    pytest --cache-clear --cov -v {posargs}
-    pytest --doctest-modules --cov --cov-append {envsitepackagesdir}/eve
 extras =
     testing
     dawn: dawn
@@ -41,3 +28,13 @@ extras =
     cuda92: cuda92
     cuda100: cuda100
     cuda101: cuda101
+
+[testenv:py{38,39}-{internal,dawn}-cpu]
+commands =
+    pytest --cache-clear --cov -v -m "not requires_gpu" {posargs}
+    pytest --doctest-modules --cov --cov-append {envsitepackagesdir}/eve
+
+[testenv:py{38,39}-{internal,dawn}-{cuda,cuda90,cuda91,cuda92,cuda100,cuda101}]
+commands =
+    pytest --cache-clear --cov -v -m "requires_gpu" {posargs}
+    pytest --doctest-modules --cov --cov-append {envsitepackagesdir}/eve
