Enabled fvm_nable test (Values off by a factor of 2 currently)

--- a/tests/gtc_unstructured_tests/regression/cpp/CMakeLists.txt
+++ b/tests/gtc_unstructured_tests/regression/cpp/CMakeLists.txt
@@ -111,5 +111,5 @@ if(BUILD_TESTING)
     add_regression_test(weights_gtir DRIVER weights)
     add_regression_test(copy_with_k_gtir DRIVER copy_with_k)
     # add_regression_test(tmp_field)
-    # add_regression_test(fvm_nabla ADDITIONAL_LIBRARIES atlas eckit)
+    add_regression_test(fvm_nabla ADDITIONAL_LIBRARIES atlas eckit)
 endif()
