--- a/tests/gtc_unstructured_tests/regression/cpp/CMakeLists.txt
+++ b/tests/gtc_unstructured_tests/regression/cpp/CMakeLists.txt
@@ -99,12 +99,14 @@ if(BUILD_TESTING)
     include(FetchGoogleTest.cmake)
     fetch_googletest()
 
-    find_package(Atlas REQUIRED)
+    find_package(Atlas)
 
-    add_subdirectory(usid)
-    add_subdirectory(gtir)
+    if(Atlas_FOUND)
+        add_subdirectory(usid)
+        add_subdirectory(gtir)
+    endif()
     add_subdirectory(fortran)
-
+    
     add_regression_test(cell2cell)
     add_regression_test(vertex2edge)
     add_regression_test(vertex2edge_gtir DRIVER vertex2edge)
@@ -112,5 +114,7 @@ if(BUILD_TESTING)
     add_regression_test(weights_gtir DRIVER weights)
     add_regression_test(copy_with_k_gtir DRIVER copy_with_k)
     add_regression_test(tmp_field)
-    add_regression_test(fvm_nabla ADDITIONAL_LIBRARIES atlas eckit)
+    if(Atlas_FOUND)
+        add_regression_test(fvm_nabla ADDITIONAL_LIBRARIES atlas eckit)
+    endif()
 endif()
