--- a/tests/gtc_unstructured_tests/regression/cpp/fortran/CMakeLists.txt
+++ b/tests/gtc_unstructured_tests/regression/cpp/fortran/CMakeLists.txt
@@ -18,7 +18,7 @@ target_link_libraries(vertex2edge_ftn_driver vertex2edge_lib_fortran)
 set_target_properties(vertex2edge_ftn_driver PROPERTIES LINKER_LANGUAGE Fortran)
 
 
-if(OpenACC_Fortran_FOUND)
+if(OpenACC_Fortran_FOUND AND TARGET GridTools::stencil_gpu)
     bindgen_add_library(vertex2edge_cuda_lib SOURCES vertex2edge_wrapper.cu FORTRAN_MODULE_NAME vertex2edge_lib)
     target_link_libraries(vertex2edge_cuda_lib PUBLIC GridTools::gridtools GridTools::stencil_gpu usid_gpu cpp_bindgen_interface)
     target_link_libraries(vertex2edge_cuda_lib_fortran PUBLIC OpenACC::OpenACC_Fortran)
