Some cleanup for native functions

--- a/tests/gtc_unstructured_tests/regression/cpp/CMakeLists.txt
+++ b/tests/gtc_unstructured_tests/regression/cpp/CMakeLists.txt
@@ -117,4 +117,5 @@ if(BUILD_TESTING)
     if(Atlas_FOUND)
         add_regression_test(fvm_nabla ADDITIONAL_LIBRARIES atlas eckit)
     endif()
+    add_regression_test(native_functions)
 endif()
