--- a/tests/gtc_unstructured_tests/regression/cpp/usid/CMakeLists.txt
+++ b/tests/gtc_unstructured_tests/regression/cpp/usid/CMakeLists.txt
@@ -1,15 +1,20 @@
 set(PYTHON_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/fvm_nabla_usid.py")
-add_custom_command(OUTPUT nabla_naive.hpp nabla_cuda.hpp
+
+add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/nabla_unaive.hpp
     COMMAND ${Python3_EXECUTABLE} ${PYTHON_SOURCE}
-    DEPENDS ${PYTHON_SOURCE} 
+    DEPENDS ${PYTHON_SOURCE}
 )
-
-add_executable(nabla_naive nabla_naive.cpp nabla_naive.hpp)
-target_link_libraries(nabla_naive PRIVATE usid_cpu gtest_main atlas)
-add_test(NAME nabla_naive COMMAND $<TARGET_FILE:nabla_naive>)
-
+        
+add_executable(nabla_naive_usid nabla_naive.cpp ${CMAKE_CURRENT_SOURCE_DIR}/nabla_unaive.hpp)
+target_link_libraries(nabla_naive_usid PRIVATE usid_cpu gtest_main atlas)
+add_test(NAME nabla_naive_usid COMMAND $<TARGET_FILE:nabla_naive_usid>)
+        
 if(TARGET usid_gpu)
-    add_executable(nabla_gpu nabla_cuda.cu nabla_cuda.hpp)
-    target_link_libraries(nabla_gpu PRIVATE usid_gpu gtest_main atlas)
-    add_test(NAME nabla_gpu COMMAND $<TARGET_FILE:nabla_gpu>)
+    add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/nabla_ugpu.hpp
+            COMMAND ${Python3_EXECUTABLE} ${PYTHON_SOURCE} ugpu
+            DEPENDS ${PYTHON_SOURCE}
+    )
+    add_executable(nabla_gpu_usid nabla_cuda.cu ${CMAKE_CURRENT_SOURCE_DIR}/nabla_ugpu.hpp)
+    target_link_libraries(nabla_gpu_usid PRIVATE usid_gpu gtest_main atlas)
+    add_test(NAME nabla_gpu_usid COMMAND $<TARGET_FILE:nabla_gpu_usid>)
 endif()
