--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -184,6 +184,7 @@ repos:
       src/gt4py/stencil_object.py |
       src/gt4py/utils/meta.py |
       src/gtc_unstructured/irs/nir_to_usid.py |
+      src/gtc_unstructured/irs/nir_passes/merge_neighbor_loops.py |
       tests/definitions.py |
       tests/test_integration/stencil_definitions.py |
       tests/test_integration/test_code_generation.py |
