Add dace to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ install_requires =
     black>=19.3b0
     cached-property~=1.5
     click~=7.1
+    dace~=0.10.0
     jinja2~=2.10
     numpy~=1.15
     packaging>=20.0
