--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ install_requires =
     black>=19.3b0
     cached-property~=1.5
     click~=7.1
-    dace~=0.10.0
+    dace@git+https://github.com/spcl/dace.git
     jinja2~=2.10
     numpy~=1.15
     packaging>=20.0
