--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -23,7 +23,7 @@
     - k_axis: { "n_intervals": int, "offset_limit": int}
     - max_ndim: int
     - multi_stages: [{ "exec": str, "steps": [[str]]]
-    - parameters: [{ "name": str, "dtype": str, "selector": [bool], "naxes": int }]
+    - parameters: [{ "name": str, "dtype": str }]
     - stage_functors: {
         name:str : {
             "args": [
@@ -43,7 +43,7 @@
         }
     }
     - stencil_unique_name: str
-    - tmp_fields: [{ "name": str, "dtype": str }]
+    - tmp_fields: [{ "name": str, "dtype": str, "selector": [bool], "naxes": int }]
 #}
 
 {%- if gt_backend == "cuda" %}
@@ -164,6 +164,7 @@ using p_{{ param.name }} = gt::arg<{{ arg_counter + loop.index0 }}, gt::global_p
 {%- endfor %}
 {% set arg_counter = arg_counter + parameters|length %}
 {% if tmp_fields -%}
+// Temporary Storages
 {%- for field in tmp_fields %}
 using p_{{ field.name }} = gt::tmp_arg<{{ arg_counter + loop.index0 }}, typename storage_traits<{{ field.dtype }}, 0, {{ field.selector | join(", ") | lower }}>::store_t>;
 {%- endfor %}
