--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -198,5 +198,6 @@ repos:
       tests/test_unittest/test_gtc/gtir_utils.py |
       tests/test_unittest/test_gtc/test_gtir_upcaster.py |
       tests/test_unittest/test_gtc/test_gtir_to_oir.py |
+      tests/test_unittest/test_gtc/test_passes/test_legacy_extents.py |
       tests/gtc_unstructured_tests/.* |
       )$
