Update setup.cfg fields with non-deprecated names

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,12 +7,12 @@
 [metadata]
 name = gt4py
 author = ETH Zurich
-author-email = enriqueg@cscs.ch
+author_email = enriqueg@cscs.ch
 description = Python API to develop performance portable applications for weather and climate
 license = gpl3
 license_files = LICENSE.txt
-long-description = file: README.rst
-long-description-content-type = text/x-rst; charset=UTF-8
+long_description = file: README.rst
+long_description_content_type = text/x-rst; charset=UTF-8
 url = https://gridtools.github.io/
 project_urls =
     Source Code = https://github.com/GridTools/gt4py
