--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -102,7 +102,8 @@ repos:
     - flake8-docstrings
     - flake8-eradicate
     - flake8-mutable
-    - flake8-rst-docstrings
+  # Disabled for now due to random false positives
+  # - flake8-rst-docstrings
     - pygments
     exclude: |
       (?x)^(
