freeze pip for testing

--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ extras =
 [testenv:py{38,39}-{internal,dawn}-cpu]
 commands =
     #pytest --cache-clear --cov -v -m "not requires_gpu" {posargs}
+    pip freeze
     pytest --doctest-modules --cov --cov-append {envsitepackagesdir}/eve
 
 [testenv:py{38,39}-{internal,dawn}-{cuda,cuda90,cuda91,cuda92,cuda100,cuda101}]
