--- a/tox.ini
+++ b/tox.ini
@@ -31,11 +31,10 @@ extras =
 
 [testenv:py{38,39}-{internal,dawn}-cpu]
 commands =
-    #pytest --cache-clear --cov -v -m "not requires_gpu" {posargs}
-    pip freeze
+    pytest --cache-clear --cov -v -m "not requires_gpu" {posargs}
     pytest --doctest-modules --cov --cov-append {envsitepackagesdir}/eve
 
 [testenv:py{38,39}-{internal,dawn}-{cuda,cuda90,cuda91,cuda92,cuda100,cuda101}]
 commands =
-    #pytest --cache-clear --cov -v -m "requires_gpu" {posargs}
+    pytest --cache-clear --cov -v -m "requires_gpu" {posargs}
     pytest --doctest-modules --cov --cov-append {envsitepackagesdir}/eve
