GTC DaCe OIR level transformations and GTC Dace backend (#366)
Co-authored-by: Rico Häuselmann <ricoh@cscs.ch>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -187,6 +187,7 @@ repos:
       src/gtc_unstructured/irs/nir_to_usid.py |
       src/gtc_unstructured/irs/nir_passes/merge_neighbor_loops.py |
       tests/definitions.py |
+      tests/eve_tests/definitions.py |
       tests/test_integration/stencil_definitions.py |
       tests/test_integration/test_code_generation.py |
       tests/test_unittest/test_call_interface.py |
