revert copy-paste mistake

--- a/setup.cfg
+++ b/setup.cfg
@@ -79,7 +79,7 @@ cuda91 =
     cupy-cuda91
 cuda92 =
     cupy-cuda92
-cuda100 =Tree.update_forward_refs()
+cuda100 =
     cupy-cuda100
 cuda101 =
     cupy-cuda101
