--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -47,6 +47,9 @@
     - positional_computation: bool
 #}
 
+{%- set axes_names = ["I", "J", "K"] -%}
+
+
 {%- if gt_backend == "cuda" %}
 #define GT_USE_GPU
 {%- endif %}
@@ -164,6 +167,10 @@ using p_{{ field.name }} = gt::arg<{{ arg_counter + loop.index0 }}, typename sto
 using p_{{ param.name }} = gt::arg<{{ arg_counter + loop.index0 }}, gt::global_parameter<{{ param.dtype }}>>;
 {%- endfor %}
 {% set arg_counter = arg_counter + parameters|length %}
+{% for axis_name in axes_names %}
+using p_domain_size_{{ axis_name }} = gt::arg<{{ arg_counter + loop.index0 }}, gt::global_parameter<gt::uint_t>>;
+{%- endfor %}
+{% set arg_counter = arg_counter + axes_names|length %}
 {% if tmp_fields -%}
 {%- for field in tmp_fields %}
 // All temporaries are 3D storages. For now...
@@ -226,14 +233,6 @@ auto make_grid(const std::array<gt::uint_t, MAX_DIM>& compute_domain_shape) {
 }  // namespace
 
 
-{% if parameters -%}
-// Global parameters
-{% for param in parameters -%}
-gt::global_parameter<{{ param.dtype }}> {{ param.name }}_param = gt::make_global_parameter<backend_t>({{ param.dtype }}{});
-{%- endfor %}
-{%- endif %}
-
-
 // Run actual computation
 void run(const std::array<gt::uint_t, MAX_DIM>& domain,
 {%- set comma = joiner(", ") %}
@@ -268,11 +267,6 @@ void run(const std::array<gt::uint_t, MAX_DIM>& domain,
     auto ds_{{ field.name }} = make_data_store<{{ field.dtype }}, {{ field.layout_id }}, {{ field.naxes }}>(bi_{{ field.name }}, domain, {{ field.name }}_origin, gt::selector<{{ field.selector | join(", ") | lower }}>{});
 {%- endfor %}
 
-    // Update global parameters
-{%- for param in parameters %}
-    gt::update_global_parameter({{ param.name }}_param, {{ param.name }});
-{%- endfor %}
-
     // Run computation and wait for the synchronization of the output stores
 {%- if positional_computation %}
     computation_t gt_computation = gt::make_positional_computation<backend_t>(
@@ -280,6 +274,12 @@ void run(const std::array<gt::uint_t, MAX_DIM>& domain,
     computation_t gt_computation = gt::make_computation<backend_t>(
 {% endif -%}
         make_grid(domain),
+{%- for param in parameters %}
+        p_{{ param.name }}() = gt::make_global_parameter<{{ param.dtype }}>({{ param.name }}),
+{% endfor -%}
+{%- for axis_name in axes_names %}
+        p_domain_size_{{ axis_name }}() = gt::make_global_parameter(domain[{{ loop.index0 }}]),
+{%- endfor -%}
 
 {%- set multi_comma = joiner(",") %}
 {%- for multi in multi_stages %}
@@ -314,9 +314,6 @@ void run(const std::array<gt::uint_t, MAX_DIM>& domain,
     gt_computation.run({%- set comma = joiner(", ") %}
 {%- for field in arg_fields -%}
                      {{ comma() }}p_{{ field.name }}()=ds_{{ field.name }}
-{%- endfor %}
-{%- for param in parameters -%}
-                     {{ comma() }}p_{{ param.name }}()={{ param.name }}_param
 {%- endfor %});
         // computation_.sync_bound_data_stores();
 }
