--- a/setup.cfg
+++ b/setup.cfg
@@ -41,27 +41,27 @@ package_dir =
 include_package_data = True
 python_requires = >= 3.8
 install_requires =
-    attrs~=20.3
+    attrs
     black>=19.3b0
-    cached-property~=1.5
-    click~=7.1
+    cached-property
+    click
     dace@git+https://github.com/spcl/dace.git
-    jinja2~=2.10
-    numpy~=1.15
-    packaging>=20.0
-    pybind11~=2.5
-    tabulate~=0.8
-    typing-extensions~=3.7
+    jinja2
+    numpy
+    packaging
+    pybind11
+    tabulate
+    typing-extensions
     # ---- eve / gtc ----
-    boltons>=20.0
-    cytoolz>=0.11
-    devtools>=0.5
-    mako>=1.1
-    networkx>=2.4
-    pydantic>=1.5, <1.8
-    toolz>=0.11
-    typing_inspect>=0.6.0
-    xxhash>=1.4.4
+    boltons
+    cytoolz
+    devtools
+    mako
+    networkx
+    pydantic
+    toolz
+    typing_inspect
+    xxhash
 
 [options.packages.find]
 where = src
@@ -88,11 +88,11 @@ cuda102 =
 dawn =
     dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git@0.0.2#subdirectory=dawn
 format =
-    clang-format>=9.0
+    clang-format
 testing =
-    hypothesis>=4.14
-    pytest~=6.1
-    tox~=3.14
+    hypothesis
+    pytest
+    tox
 
 [options.entry_points]
 # CLI entry points to be installed
