--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ envlist =
 
 [testenv]
 deps = -r {toxinidir}/requirements-dev.txt
-install_command = python -m pip install --no-cache-dir {opts} {packages}
+install_command = python -m pip install -c constraints.txt --no-cache-dir {opts} {packages}
 commands_pre =
     python -m gt4py.gt_src_manager install -m 1
     python -m gt4py.gt_src_manager install -m 2
