--- a/.github/workflows/gt4py-precommit.yml
+++ b/.github/workflows/gt4py-precommit.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip pre-commit
+        python -m pip install -c constraints.txt --upgrade pip pre-commit
         pre-commit install-hooks
     - name: Run checks
       run: |
