--- a/.github/workflows/gt4py-sphinx.yml
+++ b/.github/workflows/gt4py-sphinx.yml
@@ -19,11 +19,11 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install -r requirements-dev.txt
+        python -m pip install -c constraints.txt --upgrade pip
+        python -m pip install -c constraints.txt -r requirements-dev.txt
     - name: Install package
       run: |
-        python -m pip install .
+        python -m pip install -c constraints.txt .
     - name: Build documentation
       run: |
         cd docs/gt4py && SPHINXOPTS=-W make -e html
