--- a/.github/workflows/gtc-unstructured-cpp.yml
+++ b/.github/workflows/gtc-unstructured-cpp.yml
@@ -19,8 +19,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install eve and dependencies
       run: |
-        python3 -m pip install .[format]
-        python3 -m pip install -r requirements-dev.txt # TODO remove (once we don't include debugtools)
+        python3 -m pip install -c constraints.txt .[format]
+        python3 -m pip install -c constraints.txt -r requirements-dev.txt # TODO remove (once we don't include debugtools)
     - name: Test cpputil
       run: |
         cd src/gtc_unstructured/cpp_util
