--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,7 @@ test py38:
   image: $CSCS_REGISTRY_IMAGE/gt4py-ci:$PYVERSION
   script:
   - python -c "import cupy"
-  - pip install clang-format
+  - pip install -c constraints.txt clang-format
   - tox --sitepackages -r -e $PYVERSION_PREFIX-internal-cuda101
   variables:
     CRAY_CUDA_MPS: 1
