Update dependencies and make consistent

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-attrs~=20.3
+attrs
 black>=19.3b0
-cached-property~=1.5
-click~=7.1
-jinja2~=2.10
-numpy~=1.15
+cached-property
+click
+jinja2
+numpy
 packaging>=20.0
-pybind11~=2.5
-tabulate~=0.8
-typing-extensions~=3.7
+pybind11
+tabulate
+typing-extensions
 boltons>=20.0
 cytoolz>=0.11
 devtools>=0.5
