--- a/setup.cfg
+++ b/setup.cfg
@@ -48,20 +48,20 @@ install_requires =
     dace@git+https://github.com/spcl/dace.git
     jinja2
     numpy
-    packaging
+    packaging>=20.0
     pybind11
     tabulate
     typing-extensions
     # ---- eve / gtc ----
-    boltons
-    cytoolz
-    devtools
-    mako
-    networkx
-    pydantic
-    toolz
-    typing_inspect
-    xxhash
+    boltons>=20.0
+    cytoolz>=0.11
+    devtools>=0.5
+    mako>=1.1
+    networkx>=2.4
+    pydantic>=1.5, <1.8
+    toolz>=0.11
+    typing_inspect>=0.6.0
+    xxhash>=1.4.4
 
 [options.packages.find]
 where = src
@@ -88,7 +88,7 @@ cuda102 =
 dawn =
     dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git@0.0.2#subdirectory=dawn
 format =
-    clang-format
+    clang-format>=9.0
 testing =
     hypothesis
     pytest
