--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -45,9 +45,8 @@
     - stencil_unique_name: str
     - tmp_fields: [{ "name": str, "dtype": str }]
     - positional_computation: bool
+    - requires_K_size: bool
 #}
-
-{%- set axes_names = ["I", "J", "K"] -%}
 
 
 {%- if gt_backend == "cuda" %}
@@ -167,10 +166,10 @@ using p_{{ field.name }} = gt::arg<{{ arg_counter + loop.index0 }}, typename sto
 using p_{{ param.name }} = gt::arg<{{ arg_counter + loop.index0 }}, gt::global_parameter<{{ param.dtype }}>>;
 {%- endfor %}
 {% set arg_counter = arg_counter + parameters|length %}
-{% for axis_name in axes_names %}
-using p_domain_size_{{ axis_name }} = gt::arg<{{ arg_counter + loop.index0 }}, gt::global_parameter<gt::uint_t>>;
-{%- endfor %}
-{% set arg_counter = arg_counter + axes_names|length %}
+{% if requires_K_size %}
+using p_domain_size_K = gt::arg<{{ arg_counter }}, gt::global_parameter<gt::uint_t>>;
+{%- endif %}
+{% set arg_counter = arg_counter + 1 %}
 {% if tmp_fields -%}
 {%- for field in tmp_fields %}
 // All temporaries are 3D storages. For now...
@@ -277,9 +276,9 @@ void run(const std::array<gt::uint_t, MAX_DIM>& domain,
 {%- for param in parameters %}
         p_{{ param.name }}() = gt::make_global_parameter<{{ param.dtype }}>({{ param.name }}),
 {% endfor -%}
-{%- for axis_name in axes_names %}
-        p_domain_size_{{ axis_name }}() = gt::make_global_parameter(domain[{{ loop.index0 }}]),
-{%- endfor -%}
+{%- if requires_K_size %}
+        p_domain_size_K() = gt::make_global_parameter(domain[2]),
+{%- endif -%}
 
 {%- set multi_comma = joiner(",") %}
 {%- for multi in multi_stages %}
