--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ install_requires =
     black>=19.3b0
     cached-property>=1.5
     click>=7.1
-    dace@git+https://github.com/spcl/dace.git
+    dace@git+https://github.com/spcl/dace.git@7d0529f85ce8c7b9d9b55905def595725a690a03
     jinja2>=2.10
     numpy>=1.15
     packaging>=20.0
