--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -47,7 +47,7 @@
     - tmp_fields: [{ "name": str, "dtype": str }]
 #}
 
-{%- set axes_names = ["I", "J", "K"] -%}
+{%- set axes_names = ["I", "J"] -%}
 
 {%- if gt_backend == "cuda" %}
 #define GT_USE_GPU
