Restrict sympy version to avoid breaking dace

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,7 @@ install_requires =
     mako>=1.1
     networkx>=2.4
     pydantic>=1.5, <1.8
+    sympy<1.9
     toolz>=0.11
     typing_inspect>=0.6.0
     xxhash>=1.4.4
