--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,8 @@ install_requires =
     toolz>=0.11
     typing_inspect>=0.6.0
     xxhash>=1.4.4
+    # ---- dace-related ----
+    sympy<1.9
 
 [options.packages.find]
 where = src
