--- a/.github/workflows/gt4py-gitlab-ci.yml
+++ b/.github/workflows/gt4py-gitlab-ci.yml
@@ -2,7 +2,10 @@ name: CI
 on:
   push:
     branches:
-    - '**'
+    - master
+  pull_request:
+    branches:
+    - master
 jobs:
   build:
     runs-on: ubuntu-latest
