--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -22,6 +22,7 @@
     - halo_sizes: [int]
     - k_axis: { "n_intervals": int, "offset_limit": int}
     - max_ndim: int
+    - positional_computation: bool
     - multi_stages: [{ "exec": str, "steps": [[str]]]
     - parameters: [{ "name": str, "dtype": str }]
     - stage_functors: {
@@ -48,6 +49,7 @@
     - requires_K_size: bool
 #}
 
+{%- set axes_names = ["I", "J"] -%}
 
 {%- if gt_backend == "cuda" %}
 #define GT_USE_GPU
@@ -148,8 +150,8 @@ make_data_store(const BufferInfo& bi,
 static constexpr gt::uint_t level_offset_limit = {{ k_axis.offset_limit }};
 
 using axis_t =
-    gridtools::axis<{{ k_axis.n_intervals }}, /* NIntervals */
-                    gt::axis_config::offset_limit<level_offset_limit>>;
+    gt::axis<{{ k_axis.n_intervals }}, /* NIntervals */
+             gt::axis_config::offset_limit<level_offset_limit>>;
 
 // These halo sizes are used to determine the sizes of the temporaries
 static constexpr gt::uint_t halo_size_i = {{ halo_sizes[0] }};
@@ -166,6 +168,12 @@ using p_{{ field.name }} = gt::arg<{{ arg_counter + loop.index0 }}, typename sto
 using p_{{ param.name }} = gt::arg<{{ arg_counter + loop.index0 }}, gt::global_parameter<{{ param.dtype }}>>;
 {%- endfor %}
 {% set arg_counter = arg_counter + parameters|length %}
+{%- if positional_computation -%}
+{% for axis_name in axes_names %}
+using p_domain_size_{{ axis_name }} = gt::arg<{{ arg_counter + loop.index0 }}, gt::global_parameter<gt::uint_t>>;
+{%- endfor %}
+{% set arg_counter = arg_counter + axes_names|length %}
+{%- endif -%}
 {% if requires_K_size %}
 using p_domain_size_K = gt::arg<{{ arg_counter }}, gt::global_parameter<gt::uint_t>>;
 {%- endif %}
@@ -177,10 +185,6 @@ using p_{{ field.name }} = gt::tmp_arg<{{ arg_counter + loop.index0 }}, typename
 {%- endfor %}
 {% set arg_counter = arg_counter + tmp_fields|length %}
 {%- endif %}
-
-// Computation
-using computation_t =
-    gt::computation<p_{{ (arg_fields|list)|map(attribute='name')|join(", p_")}}>;
 
 
 // Constants
@@ -209,8 +213,15 @@ struct {{ name }}_func {
                                                gt::level<{{ region.interval_end|join(", ") }}, level_offset_limit>>)
     {
 {%- filter indent(width=8) %}
+{%- if region.entry_conditional|length > 0 %}
+if ({{ region.entry_conditional }}) {
+{%- filter indent(width=4) %}
 {{ region.body }}
-
+{%- endfilter %}
+}
+{%- else %}
+{{ region.body }}
+{%- endif %}
 {%- endfilter %}
     }
     {%- endfor %}
@@ -268,14 +279,19 @@ void run(const std::array<gt::uint_t, MAX_DIM>& domain,
 
     // Run computation and wait for the synchronization of the output stores
 {%- if positional_computation %}
-    computation_t gt_computation = gt::make_positional_computation<backend_t>(
-{% else %}
-    computation_t gt_computation = gt::make_computation<backend_t>(
-{% endif -%}
+    auto gt_computation = gt::make_positional_computation<backend_t>(
+{%- else %}
+    auto gt_computation = gt::make_computation<backend_t>(
+{%- endif %}
         make_grid(domain),
 {%- for param in parameters %}
         p_{{ param.name }}() = gt::make_global_parameter<{{ param.dtype }}>({{ param.name }}),
 {% endfor -%}
+{%- if positional_computation -%}
+{%- for axis_name in axes_names %}
+        p_domain_size_{{ axis_name }}() = gt::make_global_parameter(domain[{{ loop.index0 }}]),
+{%- endfor -%}
+{%- endif -%}
 {%- if requires_K_size %}
         p_domain_size_K() = gt::make_global_parameter(domain[2]),
 {%- endif -%}
