Functional: github action workflows

--- a/.github/workflows_disabled/gt4py-precommit.yml
+++ b/.github/workflows_disabled/gt4py-precommit.yml
@@ -3,10 +3,10 @@ name: Formatting & compliance
 on:
   push:
     branches:
-    - functional
+    - master
   pull_request:
     branches:
-    - functional
+    - master
 
 jobs:
   pre-commit:
