--- a/.github/workflows/gt4py-functional.yml
+++ b/.github/workflows/gt4py-functional.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
+          python -m pip install numpy
           python -m pip install .
       - name: Test
         run: |
