--- a/.github/workflows/gt4py-functional.yml
+++ b/.github/workflows/gt4py-functional.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install numpy Mako decorator
+          python -m pip install numpy mako decorator jinja2 networkx
           python -m pip install .
       - name: Test
         run: |
