--- a/.github/workflows/gt4py-functional.yml
+++ b/.github/workflows/gt4py-functional.yml
@@ -24,8 +24,7 @@ jobs:
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install -r requirements.txt
-          python -m pip install .
+          python -m pip install --upgrade --upgrade-strategy eager .
       - name: Test
         run: |
           python -m pytest tests/functional_tests
