--- a/.github/workflows/gt4py-functional.yml
+++ b/.github/workflows/gt4py-functional.yml
@@ -21,10 +21,14 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
+      - uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ hashFiles('setup.cfg') }}-${{ hashFiles('requirements-dev.txt') }}
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install --upgrade --upgrade-strategy eager .
+          python -m pip install --upgrade --upgrade-strategy eager -r requirements-dev.txt .
       - name: Test
         run: |
           python -m pytest tests/functional_tests
