do not remove master from precommit

--- a/.github/workflows/gt4py-precommit.yml
+++ b/.github/workflows/gt4py-precommit.yml
@@ -3,9 +3,11 @@ name: Formatting & compliance
 on:
   push:
     branches:
+    - master
     - functional
   pull_request:
     branches:
+    - master
     - functional
 
 jobs:
