--- a/.github/workflows/gt4py-functional.yml
+++ b/.github/workflows/gt4py-functional.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
+        python -m pip cache purge
         python -m pip install --upgrade --upgrade-strategy eager -r requirements-dev.txt .
     - name: Test
       run: |
