--- a/.github/workflows/gt4py-functional.yml
+++ b/.github/workflows/gt4py-functional.yml
@@ -21,10 +21,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        key: ${{ hashFiles('setup.cfg') }}-${{ hashFiles('requirements-dev.txt') }}
+#     - uses: actions/cache@v2
+#       with:
+#         path: ~/.cache/pip
+#         key: ${{ hashFiles('setup.cfg') }}-${{ hashFiles('requirements-dev.txt') }}
     - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
