--- a/.github/workflows/gt4py-functional.yml
+++ b/.github/workflows/gt4py-functional.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel
         python -m pip cache purge
-        python -m pip install --upgrade --upgrade-strategy eager -r requirements-dev.txt .
+        python -m pip install --upgrade .
     - name: Test
       run: |
         python -m pytest tests/functional_tests
