Factor out normalize_origins

--- a/src/gt4py/backend/templates/stencil_module.py.in
+++ b/src/gt4py/backend/templates/stencil_module.py.in
@@ -34,7 +34,8 @@ import numpy as np
 from numpy import dtype
 {{ imports }}
 
-from gt4py.stencil_object import AccessKind, Boundary, DomainInfo, FieldInfo, ParameterInfo, StencilObject
+from gt4py.definitions import AccessKind, Boundary, CartesianSpace
+from gt4py.stencil_object import DomainInfo, FieldInfo, ParameterInfo, StencilObject
 
 {{ module_members }}
 
