Substitute all periods and take substring

--- a/.github/workflows/gt4py-tox.yml
+++ b/.github/workflows/gt4py-tox.yml
@@ -36,6 +36,6 @@ jobs:
     - name: Test with tox
       run: |
         pyversion_no_dot="${{ matrix.python-version }}"
-        pyversion_no_dot="${pyversion_no_dot/./}"
+        pyversion_no_dot="${${pyversion_no_dot//./}:0:2}"
         pip install tox clang-format
         tox -r -e py${pyversion_no_dot}-internal-cpu
