--- a/setup.cfg
+++ b/setup.cfg
@@ -58,7 +58,7 @@ install_requires =
     devtools>=0.5
     mako>=1.1
     networkx>=2.4
-    pydantic>=1.5, <1.8
+    pydantic>=1.5
     toolz>=0.11
     typing_inspect>=0.6.0
     xxhash>=1.4.4
